updated transition times updated buildozer

--- a/tablet_app/tangrammindset.kv
+++ b/tablet_app/tangrammindset.kv
@@ -74,7 +74,7 @@
             pos: root.pos
         BalloonsWonWidget:
             id: balloons_won_widget
-            size: (root.size[0] * 0.7,root.size[1])
+            size: (root.size[0] * 0.7,root.size[1] * 0.9)
             pos: root.pos
         LoggedButton:
             id: stop_button
